[metadata]
name = pineconeize
version = 0.1.0
author = Brian Reicher
author_email = reicher.b@northeastern.edu
url = https://github.com/brianreicher/pineconeize
description = A package for parallelized tokenization and querying of text-based data with PineconeDB.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
license = Apache Software License
classifiers =
    Programming Language :: Python :: 3


[options]
packages = find:
package_dir=
    =src
zip_safe = True
include_package_data = True
install_requires =
    numpy
    pymongo
    daisy
    numba

[options.packages.find]
where=src
